fix: swagger no operation in docs
